--- a/selectcustomer.html
+++ b/selectcustomer.html
@@ -737,18 +737,25 @@
       </div>
       <div class="w-2/3 xl:w-1/3 flex gap-x-4 justify-end">
         <a
-          href="#"
-          class="bg-grey-seven rounded-[5px] px-6 py-2 group text-grey-three"
-        >
-          <button class="cursor-pointer">Back</button>
-        </a>
+        href="./choosecar.html"
+        class="bg-grey-seven rounded-[5px] px-6 py-2 group text-grey-three"
+      >
+        <button class="cursor-pointer">Back</button>
+      </a>
 
-        <a
-          href="#"
-          class="bg-primary-color px-6 py-2 group rounded-[5px] text-white"
-        >
-          <button class="cursor-pointer">Search Cars</button>
-        </a>
+      <a
+        href="#"
+        class="bg-green-color px-6 py-2 group rounded-[5px] text-white"
+      >
+        <button class="cursor-pointer">Create Quote</button>
+      </a>
+
+      <a
+        href="#"
+        class="bg-primary-color px-6 py-2 group rounded-[5px] text-white"
+      >
+        <button class="cursor-pointer">Generate PI</button>
+      </a>
       </div>
     </footer>
 
