--- a/selectcustomer.html
+++ b/selectcustomer.html
@@ -362,6 +362,7 @@
                   >Customer Name <span class="text-red-700">*</span>
                 </label>
                 <input
+                  id="cstmrName"
                   type="text"
                   placeholder="Enter Customer Name"
                   class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three"
@@ -737,25 +738,25 @@
       </div>
       <div class="w-2/3 xl:w-1/3 flex gap-x-4 justify-end">
         <a
-        href="./choosecar.html"
-        class="bg-grey-seven rounded-[5px] px-6 py-2 group text-grey-three"
-      >
-        <button class="cursor-pointer">Back</button>
-      </a>
+          href="./choosecar.html"
+          class="bg-grey-seven rounded-[5px] px-6 py-2 group text-grey-three"
+        >
+          <button class="cursor-pointer">Back</button>
+        </a>
 
-      <a
-        href="#"
-        class="bg-green-color px-6 py-2 group rounded-[5px] text-white"
-      >
-        <button class="cursor-pointer">Create Quote</button>
-      </a>
+        <a
+          href="#"
+          class="bg-green-color px-6 py-2 group rounded-[5px] text-white"
+        >
+          <button class="cursor-pointer">Create Quote</button>
+        </a>
 
-      <a
-        href="#"
-        class="bg-primary-color px-6 py-2 group rounded-[5px] text-white"
-      >
-        <button class="cursor-pointer">Generate PI</button>
-      </a>
+        <a
+          href="#"
+          class="bg-primary-color px-6 py-2 group rounded-[5px] text-white"
+        >
+          <button class="cursor-pointer">Generate PI</button>
+        </a>
       </div>
     </footer>
 
