--- a/index.html
+++ b/index.html
@@ -825,9 +825,7 @@
             </div>
           </div>
 
-          <label for="searchStockArea" class="text-sm mt-3"
-            >Stock Area</label
-          >
+          <label for="searchStockArea" class="text-sm mt-3">Stock Area</label>
           <div class="relative w-full mt-1">
             <select
               name="searchStockArea"
@@ -1121,7 +1119,7 @@
 
           <!-- Step 4 -->
           <a
-            href="#"
+            href="./generatePi.html"
             class="flex flex-row items-center gap-x-1.5 cursor-pointer"
             data-step="4"
           >
