--- a/choosecar.html
+++ b/choosecar.html
@@ -639,7 +639,7 @@
 
           <!-- Step 4 -->
           <a
-            href="#"
+            href="./generatePi.html"
             class="flex flex-row items-center gap-x-1.5 cursor-pointer"
             data-step="4"
           >
