--- a/generatePi.html
+++ b/generatePi.html
@@ -183,7 +183,7 @@
             data-step="3"
           >
             <div
-              class="rounded-full border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
+              class="rounded-full bg-primary-color border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
             >
               <p class="text-sm">3</p>
             </div>
@@ -202,7 +202,7 @@
             data-step="4"
           >
             <div
-              class="rounded-full border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
+              class="rounded-full bg-primary-color border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
             >
               <p class="text-sm">4</p>
             </div>
