added Transitions and dark mode

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./src/output.css" />
   </head>
-  <body>
+  <body
+    class="bg-white dark:bg-dark-background-color"
+  >
     <!-- Navbar Starts here -->
     <nav
       class="flex justify-between items-center py-3 px-4 bg-white dark:bg-dark-background-color sticky w-full top-0 z-20"
