--- a/choosecar.html
+++ b/choosecar.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./src/output.css" />
   </head>
-  <body>
+  <body class="dark:bg-dark-background-color">
     <!-- Navbar Starts here -->
     <nav
       class="flex justify-between items-center py-3 px-4 bg-white dark:bg-dark-background-color sticky w-full top-0 z-20"
@@ -207,7 +207,7 @@
     <!-- Navbar Ends here -->
 
     <!-- Content Section Starts Here -->
-    <div class="bg-grey-eight px-4 py-2 h-screen">
+    <div class="bg-grey-eight px-4 py-2 ">
       <!-- Import your car starts -->
       <div class="flex justify-between">
         <div>
@@ -766,7 +766,7 @@
       </div>
       <div class="w-2/3 xl:w-1/3 flex gap-x-4 justify-end">
         <a
-          href="./choosecar.html"
+          href="./index.html"
           class="bg-grey-seven rounded-[5px] px-3 xl:px-5 py-2 group text-grey-three"
         >
           <button class="cursor-pointer">Back</button>
@@ -777,13 +777,13 @@
           class="bg-green-color px-3 xl:px-5 py-2 group rounded-[5px] text-white"
         >
           <button class="cursor-pointer flex">
-           <span class="hidden lg:block lg:pr-1">Create</span> Quote
+            <span class="hidden lg:block lg:pr-1">Create</span> Quote
           </button>
         </a>
 
         <a
           href="#"
-          class="bg-primary-color px-3 xl:px-5 py-2 group rounded-[5px] text-white"
+          class="bg-primary-color px-3 xl:px-5 py-2 group rounded-[5px] text-white dark:bg-dark-primary-color"
         >
           <button class="cursor-pointer">Select Customer</button>
         </a>
